# ngx_mruby

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  CNAME  Dockerfile  INSTALL  LEGAL  MITL  Makefile  Makefile.in  README  README.md  TODO  Vagrantfile  apply-clang-format  build.sh  build_config.rb  build_config_dynamic.rb  config  config.in  configure  configure.in  index.html  mymruby_with_mrbgems.sh  nginx_version  ngx_http_mruby.c  ngx_http_mruby.h  ngx_http_mruby_core.c  ngx_http_mruby_core.h  ngx_http_mruby_directive.c  ngx_http_mruby_directive.h  ngx_http_mruby_handler.c  ngx_http_mruby_handler.h  ngx_http_mruby_hook.c  ngx_http_mruby_hook.h  ngx_http_mruby_init.c  ngx_http_mruby_init.h  ngx_http_mruby_module.c  (+10 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
dependence/ngx_devel_kit/src/: ndk_set_var.c
docker/conf/: nginx.conf
docker/hook/: proxy.rb  test.rb
docs/: DEVELOPMENT.md  README.md
docs/class_and_method/: README.md
docs/directives/: README.md
docs/install/: README.md
docs/test/: README.md
docs/use_case/: README.md
examle/: hello.mrb  nginx.conf
example/: README.md  hello.mrb  nginx.conf  nginx.conf.add_handler  proxy.rb  set.rb  unified_hello.rb
example/unified_with_ngx_mruby/: unified_hello.rb
misc/: Dockerfile.travis_emulate  provision.sh
mrbgems/auto-ssl/: mrbgem.rake
mrbgems/auto-ssl/mrblib/: mrb_auto_ssl.rb  mrb_auto_ssl_client.rb  mrb_auto_ssl_dehydrated.rb
mrbgems/event/: mrbgem.rake
mrbgems/event/mrblib/: event.rb
mrbgems/ngx_mruby_mrblib/: mrbgem.rake
mrbgems/ngx_mruby_mrblib/mrblib/: mrb_nginx.rb
mrbgems/rack-based-api/: mrbgem.rake
mrbgems/rack-based-api/mrblib/: rack.rb
mrbgems/rack-based-api/test/: mrb_nginx.rb
mruby/mrbgems/mruby-compiler/core/: lex.def
mruby/mrbgems/mruby-fiber/src/: fiber.c
mruby/src/: gc.c  vm.c
mruby/tasks/: libmruby.rake
mruby_test/: build_config.rb
mruby_test/mrbgems/mruby-compiler/core/: parse.y
mruby_test/mrbgems/mruby-string-ext/test/: string.rb
mruby_test/src/: vm.c
mruby_test/test/t/: syntax.rb
src/: ngx_http_mruby_connection.c  ngx_http_mruby_connection.h  ngx_http_mruby_core.c  ngx_http_mruby_core.h  ngx_http_mruby_directive.c  ngx_http_mruby_directive.h  ngx_http_mruby_filter.c  ngx_http_mruby_filter_handler.c  ngx_http_mruby_filter_handler.h  ngx_http_mruby_handler.c  ngx_http_mruby_init.c  ngx_http_mruby_module.c  ngx_http_mruby_module.h  ngx_http_mruby_request.c  ngx_http_mruby_request.h  ngx_http_mruby_server.c  ngx_http_mruby_server.h  ngx_http_mruby_state.c  ngx_http_mruby_state.h  ngx_http_mruby_time.c  ngx_http_mruby_time.h  ngx_http_mruby_upstream.c  ngx_http_mruby_upstream.h  ngx_http_mruby_var.c  ngx_http_mruby_var.h
src/http/: neverbleed.c  ngx_http_mruby_async.c  ngx_http_mruby_async.h  ngx_http_mruby_connection.c  ngx_http_mruby_connection.h  ngx_http_mruby_core.c  ngx_http_mruby_core.h  ngx_http_mruby_event.c  ngx_http_mruby_event.h  ngx_http_mruby_filter.c  ngx_http_mruby_filter.h  ngx_http_mruby_init.c  ngx_http_mruby_init.h  ngx_http_mruby_module.c  ngx_http_mruby_module.h  ngx_http_mruby_request.c  ngx_http_mruby_request.h  ngx_http_mruby_server.c  ngx_http_mruby_server.h  ngx_http_mruby_ssl.c  ngx_http_mruby_ssl.h  ngx_http_mruby_upstream.c  ngx_http_mruby_upstream.h  ngx_http_mruby_var.c  ngx_http_mruby_var.h
src/stream/: ngx_stream_mruby_async.c  ngx_stream_mruby_async.h  ngx_stream_mruby_connection.c  ngx_stream_mruby_connection.h  ngx_stream_mruby_core.c  ngx_stream_mruby_core.h  ngx_stream_mruby_init.c  ngx_stream_mruby_init.h  ngx_stream_mruby_module.c  ngx_stream_mruby_module.h
test/: build_config.rb
test/client/: client.crt  client.key
test/conf/: nginx.conf  nginx.stream.conf
test/conf/auto-ssl/: dehydrated.conf  nginx.conf.client_example  nginx.conf.dehydrated_example  nginx.conf.example  ngx_mruby-hook.sh
test/html/: add_handler.rb  backtrace.rb  exit_worker.rb  filter_dynamic_arg.rb  header_filter.rb  init_worker.rb  issue-210.rb  set2.rb  set_ssl_cert_and_key.rb  stream_lb.rb  unified_hello.rb
test/html/auto-ssl/: ngx_mruby-hook.sh
test/html/output_filter_builtin_header/: index.html
test/html/output_filter_header/: index.html
test/t/: issue-268-test.rb  ngx_mruby.rb
